--- a/n4jtest/templates/index.html
+++ b/n4jtest/templates/index.html
@@ -21,7 +21,7 @@
     <div class="container">
         <form action="." method="post">
             {% csrf_token %}
-            {{ form }}
+            {{ form.as_p }}
             <input type="submit" class="btn" value="Search">
         </form>
     </div>
