--- a/n4jtest/templates/index.html
+++ b/n4jtest/templates/index.html
@@ -12,8 +12,17 @@
             justify-content: center;
             margin: 50px;
         }
-        input{
-            margin:20px 0 20px 0;
+        label{
+            text-align: center;
+        }
+        input,label{
+            padding: .5rem;
+            display: block;
+        }
+        .btn{
+            display: block;
+            padding: .5rem;
+            margin: 10px auto;
         }
     </style>
 </head>
@@ -21,7 +30,7 @@
     <div class="container">
         <form action="." method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form }}
             <input type="submit" class="btn" value="Search">
         </form>
     </div>
