--- a/n4jtest/templates/movies.html
+++ b/n4jtest/templates/movies.html
@@ -5,8 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
+    <style>
+        table{
+            display: flex;
+            justify-content: center;
+            padding: 10px;
+            border-collapse: collapse;
+            text-align: center;
+        }
+        tr,td{
+            border:2px black solid;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello</h1>
+
+    <table>
+        <tr>
+          {% for col in movies.columns %}
+            <td>
+              {{col}}
+            </td>
+          {% endfor %}
+        </tr>
+          {% for index, row in movies.iterrows %}
+            <tr>
+              {% for cell in row %}
+                <td>
+                  {{cell}}
+                </td>
+              {% endfor %}
+            </tr>
+          {% endfor %}
+      </table>
 </body>
 </html>
